--- a/works.html
+++ b/works.html
@@ -282,7 +282,7 @@
     <div class="container">
         <div class="row nomargin">
             <div class="col col--xs-12 col--sm-6 col--md-4 nopadding">
-                <p class="footer__text">© 2018 a.k1 All rights reserved</p>
+                <p class="footer__text">© 2020 CodeXpresso.info All rights reserved</p>
             </div>
             <div class="col col--xs-12 col--sm-6 col--md-4 nopadding">
                 <p class="footer__socials">
@@ -300,12 +300,12 @@
             </div>
             <div class="col col--xs-5 col--sm-6 col--md-1 nopadding">
                 <div class="footer__mail">
-                    <a class="footer__mail-link" href="mailto:job@ak1.io">job@ak1.io</a>
+                    <a class="footer__mail-link" href="mailto:job@ak1.io">job@codexpresso.info</a>
                 </div>
             </div>
             <div class="col col--xs-7 col--sm-6 col--md-3 nopadding">
                 <div class="footer__tel">
-                    <a class="footer__tel-link" href="tel:+65487343745">+65 487 343 745</a>
+                    <a class="footer__tel-link" href="tel:+65487343745">+91 9944 850 615</a>
                 </div>
             </div>
         </div>
